--- a/css/style.css
+++ b/css/style.css
@@ -22,11 +22,12 @@ body {
 #content {
   padding: 20px;
   background: rgba(255,255,255,.85);
+  border-radius: 2em;
 }
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  color: white;
 }
 
 h1 {
@@ -35,7 +36,7 @@ h1 {
 }
 
 h2 {
-  font-size: 1.5em;
+  font-size: 2em;
   margin-top: .5em;
 }
 
@@ -49,15 +50,17 @@ img {
   max-width: 100%;
   width: 100%;
   height: auto;
+  border-radius: 1em;
 }
 
 p {
-  font-size: 1em;
+  font-size: 1.3em;
 }
 
 a {
   color: black;
   text-decoration: none;
+  font-size: 1.3em;
 }
 
 a:hover {
